fix sticker controls overlap on mobile

--- a/StyleSheets/photobooth.css
+++ b/StyleSheets/photobooth.css
@@ -227,4 +227,8 @@ button:disabled {
         transform-origin: top center;
         margin-bottom: -90px;
     }
+
+    #stickerControls {
+        margin-top: 12px;
+    }
 }
